RESOLVED FIXED 245655
[LFC][IFC] Let's use "trimming" instead of "collapsing" in InlineContentBreaker
https://bugs.webkit.org/show_bug.cgi?id=245655
Summary [LFC][IFC] Let's use "trimming" instead of "collapsing" in InlineContentBreaker
alan
Reported 2022-09-25 23:09:01 PDT
ssia
Attachments
Patch (15.82 KB, patch)
2022-09-25 23:11 PDT, alan
no flags
alan
Comment 1 2022-09-25 23:11:04 PDT
EWS
Comment 2 2022-09-26 08:32:49 PDT
Committed 254862@main (e28b8cba3c53): <https://commits.webkit.org/254862@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462611 [details].
Radar WebKit Bug Importer
Comment 3 2022-09-26 08:33:17 PDT
Note You need to log in before you can comment on or make changes to this bug.