[LFC][IFC] Let's use "trimming" instead of "collapsing" in InlineContentBreaker https://bugs.webkit.org/show_bug.cgi?id=245655

Reviewed by Antti Koivisto.

At line breaking time trimming is the correct term to use.

* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::InlineContentBreaker::processOverflowingContent const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::resetTrailingWhitespace):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::append):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::reset):
* Source/WebCore/layout/formattingContexts/inline/InlineContentBreaker.h:
(WebCore::Layout::InlineContentBreaker::ContinuousContent::leadingTrimmableWidth const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::trailingTrimmableWidth const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasTrimmableContent const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::isFullyTrimmable const):
(WebCore::Layout::InlineContentBreaker::ContinuousContent::leadingCollapsibleWidth const): Deleted.
(WebCore::Layout::InlineContentBreaker::ContinuousContent::trailingCollapsibleWidth const): Deleted.
(WebCore::Layout::InlineContentBreaker::ContinuousContent::hasCollapsibleContent const): Deleted.
(WebCore::Layout::InlineContentBreaker::ContinuousContent::isFullyCollapsible const): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineLine.cpp:
(WebCore::Layout::Line::TrimmableTrailingContent::remove):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineCandidate::InlineContent::appendInlineItem):

Canonical link: https://commits.webkit.org/254862@main